--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="fonts/fontawesome/css/fontawesome-all.min.css">
@@ -20,35 +21,45 @@
 
 <body>
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content">
-        <div class="container">
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
-                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">BIONIX</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">ICON</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sign In</a>
-                    </li>
-                </ul>
-            </div>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+        <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="collapse-target">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapse_target">
+            <div class="navbar-text">ISE</div>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">BIONIX</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">ICON</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contacs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sign In</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <h1>BIONIX ends on 22 December 2020 at 23:59 WIB</h1>
+        </div>
+    </div>
+
+    <div class="tombol">
+        <a href="#" target="_blank">
+            <button type="button" class="button">Apply now</button>
+        </a>
+    </div>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
