add section home

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="#">ICON</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contacs</a>
+                    <a class="nav-link" href="#">Contacts</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sign In</a>
@@ -46,6 +46,7 @@
             </ul>
         </div>
     </nav>
+
     <!--Header-->
     <header>
         <div class="container">
@@ -65,6 +66,44 @@
             </a>
         </div>
     </header>
+
+    <!--Section list-->
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link active" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Timeline</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Prizes</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+        </li>
+    </ul>
+
+    <!--about-->
+    <section id="about" class="full-section bgipad">
+        <div class="title">
+            <div class="title-heading">
+                <h1>What is BIONIX 2020?</h1>
+            </div>
+        </div>
+        <div id="descbox-about">
+            <div class="description">
+                <p>BIONIX adalah perlombaan berskala nasional yang berhadiah FREE PASS SNMPTN bagi pemenangnya dan
+                    diadakan oleh Departemen Sistem Informasi ITS. BIONIX 2020 kali ini menggunakan model kompetisi
+                    Business and IT Innovation Competition yang memberikan kesempatan bagi peserta untuk mengeksplor ide
+                    bisnis kreatif berbasis IT sesuai dengan tema yang telah ditentukan.</p>
+            </div>
+        </div>
+        <div class="tombol"">
+            <a href=" #" target="_blank">
+            <button type="button" class="button" id="button2">Download Guideline</button>
+            </a>
+        </div>
+    </section>
 
     <!--Js-->
     <script src="js/jquery.min.js"></script>
