add section home

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
         </div>
     </section>
 
+    <!--timeline-->
+    <section id="timeline" class="full-section bgipad">
+
+    </section>
+
     <!--Js-->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
