--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!--Header-->
   <header>
     <div class="container">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center" id="header-row">
         <h1>BIONIX ends on 22 December 2020 at 23:59 WIB</h1>
       </div>
     </div>
@@ -117,6 +117,11 @@
 
     </section>
 
+    <!--prizes-->
+    <section id="prizes" class="tab-pane fade full-section bgipad" role="tabpanel">
+
+    </section>
+
     <!--contact-->
     <section id="contact" class="tab-pane fade full-section bgipad" role="tabpanel">
       <div class="title">
@@ -129,6 +134,47 @@
         <h1>Name 0000-0000-0000</h1>
       </div>
     </section>
+  </div>
+
+  <!--footer-->
+  <div class="container" id="footer">
+    <div class="row">
+      <div class="col">
+        <h1>Information System Expo</h1>
+        <h1>Breakthrough</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris risus nulla, sagittis et elementum a, varius
+          in mauris. </p>
+        <h1 style="margin-top: 30px;">© 2020 ISE</h1>
+      </div>
+      <div class="col" id="footer-right">
+        <h1>Find us on social media</h1>
+        <div class="listsocmed">
+          <a href="https://line.me/R/ti/p/%40isexpo" target="_blank" title="Line">
+            <i class="fab fa-line" aria-hidden="true"></i>
+          </a>
+          <a href="https://www.instagram.com/is_expo/" target="_blank" title="Instagram">
+            <i class="fab fa-instagram" aria-hidden="true"></i>
+          </a>
+          <a href="https://twitter.com/is_expo" target="_blank" title="Twitter">
+            <i class="fab fa-twitter" aria-hidden="true"></i>
+          </a>
+          <a href="" target="_blank" title="Tiktok">
+            <i class="fab fa-tiktok" aria-hidden="true"></i>
+          </a>
+          <a href="https://www.youtube.com/channel/UCPbOX3w8G4_dwOMDNl97PTw" target="_blank" title="YouTube">
+            <i class="fab fa-youtube" aria-hidden="true"></i>
+        </div>
+        <div id="web-ise">
+          <a href="https://ise-its.com/" target="_blank" title="Website">ise-its.com
+            <i class="fas fa-globe" aria-hidden="true"></i>
+          </a>
+        </div>
+        <div class="logo">
+          <img src="img/logo1.png" style="height: 102px; width: 102px;" class="img-fluid">
+          <img src="img/logo-si.png" style="width: 149px; height: 53px;" class="img-fluid">
+        </div>
+      </div>
+    </div>
   </div>
 
   <!--Js-->
