--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="tombol">
-        <a href=" #" target="_blank">
+        <a href="#" target="_blank">
           <button type="button" class="button" id="button2">
             Download Guideline
           </button>
@@ -138,6 +138,7 @@
 
   <!--footer-->
   <div class="container" id="footer">
+    <div class="img"></div>
     <div class="row">
       <div class="col">
         <h1>Information System Expo</h1>
@@ -158,7 +159,7 @@
           <a href="https://twitter.com/is_expo" target="_blank" title="Twitter">
             <i class="fab fa-twitter" aria-hidden="true"></i>
           </a>
-          <a href="" target="_blank" title="Tiktok">
+          <a href="https://vt.tiktok.com/ZSaw8WST/" target="_blank" title="Tiktok">
             <i class="fab fa-tiktok" aria-hidden="true"></i>
           </a>
           <a href="https://www.youtube.com/channel/UCPbOX3w8G4_dwOMDNl97PTw" target="_blank" title="YouTube">
@@ -176,6 +177,7 @@
       </div>
     </div>
   </div>
+
 
   <!--Js-->
   <script src="js/jquery.min.js"></script>
