add section prizes

--- a/index.html
+++ b/index.html
@@ -119,7 +119,67 @@
 
     <!--prizes-->
     <section id="prizes" class="tab-pane fade full-section bgipad" role="tabpanel">
-
+      <div class="title">
+        <div class="title-heading">
+          <h1>BE THE WINNER OF BIONIX 2020</h1>
+        </div>
+      </div>
+      <div class="container" id="prizes-box">
+        <h1 id="box-title">1st PLACE</h1>
+        <div class="row">
+          <div class="col-sm">
+            <img src="img/Term of Use 1.png" id="prizes-img">
+            <h1>SERTIFIKAT</h1>
+          </div>
+          <div class="col-sm">
+            <img src="img/Success 1.png" id="prizes-img">
+            <h1>FREEPASS SNMPTN SISTEM INFORMASI ITS 2021</h1>
+          </div>
+          <div class="col-sm">
+            <img src="img/Payment Processed 1.png" id="prizes-img">
+            <h1>Rp. 3.000.000,-</h1>
+          </div>
+        </div>
+      </div>
+      <div class="container" id="prizes-box">
+        <h1 id="box-title">2nd PLACE</h1>
+        <div class="row">
+          <div class="col-sm">
+            <img src="img/Term of Use 1.png" id="prizes-img">
+            <h1>SERTIFIKAT</h1>
+          </div>
+          <div class="col-sm">
+            <img src="img/Payment Processed 1.png" id="prizes-img">
+            <h1>Rp. 2.000.000,-</h1>
+          </div>
+        </div>
+      </div>
+      <div class="container" id="prizes-box">
+        <h1 id="box-title">3rd PLACE</h1>
+        <div class="row">
+          <div class="col-sm">
+            <img src="img/Term of Use 1.png" id="prizes-img">
+            <h1>SERTIFIKAT</h1>
+          </div>
+          <div class="col-sm">
+            <img src="img/Payment Processed 1.png" id="prizes-img">
+            <h1>Rp. 1.000.000,-</h1>
+          </div>
+        </div>
+      </div>
+      <div class="container" id="prizes-box">
+        <h1 id="box-title">Favorite Winner</h1>
+        <div class="row">
+          <div class="col-sm">
+            <img src="img/Term of Use 1.png" id="prizes-img">
+            <h1>SERTIFIKAT</h1>
+          </div>
+          <div class="col-sm">
+            <img src="img/Payment Processed 1.png" id="prizes-img">
+            <h1>Rp. 300.000,-</h1>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!--contact-->
@@ -177,7 +237,6 @@
       </div>
     </div>
   </div>
-
 
   <!--Js-->
   <script src="js/jquery.min.js"></script>
