add section timeline

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
 
     <!--timeline-->
     <section id="timeline" class="tab-pane fade full-section bgipad" role="tabpanel">
-
+      <div class="container" id="timeline-img">
+        <img src="img/timeline.svg" class="img-fluid">
+      </div>
     </section>
 
     <!--prizes-->
