--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <header>
     <div class="container">
       <div class="row justify-content-center" id="header-row">
-        <h1>BIONIX ends on 22 December 2020 at 23:59 WIB</h1>
+        <h1>BIONIX registration ends on 15 November 2020 at 23:59 WIB</h1>
       </div>
     </div>
     <div class="countdown">
@@ -105,7 +105,8 @@
         </div>
       </div>
       <div class="tombol">
-        <a href="#" target="_blank">
+        <a href="https://dashboard-ise-2020.s3-ap-southeast-1.amazonaws.com/Guildeline+Book+Bionix+2020.pdf"
+          target="_blank">
           <button type="button" class="button" id="button2">
             Download Guideline
           </button>
