--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
           <h1>BIONIX registration ends on 15 November 2020 at 23:59 WIB</h1>
         </div>
       </div>
-      <div class="countdown">
-        <li><span id="days">00</span> Day</li>
-        <li><span id="hours">00</span> Hour</li>
-        <li><span id="minutes">00</span> Minute</li>
-        <li><span id="seconds">00</span> Second</li>
+      <div class="countdown pt-3">
+        <li class="rounded shadow-sm"><span id="days">00</span> Day</li>
+        <li class="rounded shadow-sm"><span id="hours">00</span> Hour</li>
+        <li class="rounded shadow-sm"><span id="minutes">00</span> Minute</li>
+        <li class="rounded shadow-sm"><span id="seconds">00</span> Second</li>
       </div>
       <div class="tombol">
         <a href="https://dashboard.ise-its.com/register" target="_blank">
