add footer desc
add contact

add logo

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   </head>
 
   <body class="bg-gradient">
+    <!-- Logo -->
+    <img src="img/Logo_ISE_2020.png" alt="logo ISE! 2020" class="logo-ise" />
     <!--navbar-->
     <nav class="navbar navbar-expand-md text-dark-blue">
       <button
@@ -37,20 +39,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapse-target">
-        <div class="navbar-text font-weight-bold">ISE</div>
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">BIONIX</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">ICON</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contacts</a>
-          </li>
           <li class="nav-item">
             <a
               class="border border-dark btn nav-link px-3 py-1 rounded-pill"
@@ -123,12 +112,17 @@
         <div id="descbox-about">
           <div class="description">
             <p>
-              BIONIX adalah perlombaan berskala nasional yang berhadiah FREE
-              PASS SNMPTN bagi pemenangnya dan diadakan oleh Departemen Sistem
-              Informasi ITS. BIONIX 2020 kali ini menggunakan model kompetisi
-              Business and IT Innovation Competition yang memberikan kesempatan
-              bagi peserta untuk mengeksplor ide bisnis kreatif berbasis IT
-              sesuai dengan tema yang telah ditentukan.
+              BIONIX adalah serangkaian acara ISE! dengan konsep kompetisi
+              tingkat nasional yang ditujukan bagi pelajar SMA/SMK dengan
+              menggabungkan antara bisnis dan teknologi informasi. Pada BIONIX
+              2020 kali ini menggunakan model kompetisi Business and IT
+              Innovation Competition yang memberikan kesempatan bagi peserta
+              untuk me ide bisnis kreatif berbasis IT sesuai dengan tema yang
+              telah ditentukan. Pada kompetisi tahun ini, BIONIX 2020 akan
+              dilakukan secara online mulai dari babak penyisihan hingga final.
+              Selain itu, semua peserta BIONIX 2020 akan mendapatkan pencerdasan
+              berupa kegiatan coaching dengan narasumber yang kompeten pada
+              bidangnya.
             </p>
           </div>
         </div>
@@ -236,8 +230,8 @@
           </div>
         </div>
         <div class="contact-info">
-          <h1>Name 0000-0000-0000</h1>
-          <h1>Name 0000-0000-0000</h1>
+          <h1>Alfrida : 0831-4428-8955(WA)</h1>
+          <h1>Nadia : nadiawptrr (line)</h1>
         </div>
       </section>
     </div>
@@ -250,8 +244,11 @@
           <h1>Information System Expo</h1>
           <h1>Breakthrough</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-            risus nulla, sagittis et elementum a, varius in mauris.
+            ISE! merupakan singkatan dari Information Systems Expo yang
+            merupakan event tahunan yang diselenggarakan oleh Departemen Sistem
+            Informasi Institut Teknologi Sepuluh Nopember Surabaya dalam rangka
+            memperkenalkan Departemen Sistem Informasi ITS kepada masyarakat
+            luas.
           </p>
           <h1 class="d-none d-sm-block" style="margin-top: 30px">© 2020 ISE</h1>
         </div>
