--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a
-              class="border border-dark btn nav-link px-3 py-1 rounded-pill"
+              class="border-dark btn nav-link font-weight-bold px-3 py-1 shadow-sm rounded-pill tombol-daftar"
               href="https://dashboard.ise-its.com/login"
               target="_blank"
-              >Sign In</a
+              >DAFTAR</a
             >
           </li>
         </ul>
