--- a/index.html
+++ b/index.html
@@ -28,9 +28,17 @@
 
   <body class="bg-gradient">
     <!-- Logo -->
-    <img src="img/Logo_ISE_2020.png" alt="logo ISE! 2020" class="logo-ise" />
+
     <!--navbar-->
-    <nav class="navbar navbar-expand-md text-dark-blue">
+    <nav class="navbar navbar-expand-md text-dark-blue container mb-5">
+      <div class="nav-item">
+        <img
+          src="img/Logo_ISE_2020.png"
+          alt="logo ISE! 2020"
+          style="width: 48px; height: auto"
+        />
+      </div>
+
       <button
         class="navbar-toggler ml-auto"
         data-toggle="collapse"
@@ -38,7 +46,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="collapse-target">
+      <div class="collapse navbar-collapse mt-3 mt-md-0" id="collapse-target">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a
@@ -56,11 +64,15 @@
     <header>
       <div class="container">
         <div class="row justify-content-center" id="header-row">
-          <img src="img/bionix.png" alt="" class="img-fluid px-3 pt-4" />
-          <h1>BIONIX registration ends on 15 November 2020 at 23:59 WIB</h1>
+          <div class="col-12">
+            <img src="img/bionix.png" alt="" class="img-fluid px-3 pt-4" />
+          </div>
+          <div class="col-12">
+            <h1>BIONIX registration ends on 15 November 2020 at 23:59 WIB</h1>
+          </div>
         </div>
       </div>
-      <div class="countdown pt-3">
+      <div class="countdown mt-3">
         <li class="rounded shadow-sm"><span id="days">00</span> Day</li>
         <li class="rounded shadow-sm"><span id="hours">00</span> Hour</li>
         <li class="rounded shadow-sm"><span id="minutes">00</span> Minute</li>
