--- a/index.html
+++ b/index.html
@@ -39,18 +39,6 @@
     <div class="nav-item">
       <img src="img/Logo_ISE_2020.png" alt="logo ISE! 2020" style="width: 48px; height: auto" />
     </div>
-
-    <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#collapse-target">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse mt-3 mt-md-0" id="collapse-target">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="border-dark btn nav-link font-weight-bold px-3 py-1 shadow-sm rounded-pill tombol-daftar"
-            href="https://dashboard.ise-its.com/login" target="_blank">DAFTAR</a>
-        </li>
-      </ul>
-    </div>
   </nav>
 
   <!--Header-->
@@ -61,21 +49,21 @@
           <img src="img/bionix.png" alt="" class="img-fluid px-3 pt-4" />
         </div>
         <div class="col-12">
-          <h1>BIONIX registration ends on 15 November 2020 at 23:59 WIB</h1>
+          <h1>BIONIX registration is closed since November 15th 2020, see you next ISE! :) </h1>
         </div>
       </div>
     </div>
-    <div class="countdown mt-3">
+    <!-- <div class="countdown mt-3">
       <li class="rounded shadow-sm"><span id="days">00</span> Day</li>
       <li class="rounded shadow-sm"><span id="hours">00</span> Hour</li>
       <li class="rounded shadow-sm"><span id="minutes">00</span> Minute</li>
       <li class="rounded shadow-sm"><span id="seconds">00</span> Second</li>
     </div>
     <div class="tombol">
-      <a href="https://dashboard.ise-its.com/register" target="_blank">
+      <a href="#" target="_blank">
         <button type="button" class="button">Apply now</button>
       </a>
-    </div>
+    </div> -->
   </header>
 
   <!--Section list-->
