--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!--navbar section-->
   <div class="nav-container">
       <nav class="navbar navbar-custom fixed-top navbar-expand-lg container-fluid mb-5">
-        <div class="logo"><a class="navbar-brand"href="#"><img src="img/Logo Ise 2021.svg" alt="logo ISE! 2021" width="140px" height="auto"/></a></div>
+        <div class="logo"><a class="navbar-brand" href="#"><img src="img/Logo Ise 2021.svg" alt="logo ISE! 2021" /></a></div>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 list">
           <ul class="border-0 nav nav-tabs ml-auto" role="tablist">
             <li class="nav-item" role="presentation">
@@ -44,7 +44,6 @@
             </li>
             <li class="nav-item" role="presentation">
               <a class="nav-link" href="#studentlevel" data-toggle="tab" role="tab">Student Level<i class="fas fa-angle-down"></i></a>
-              
             </li>
             <li class="nav-item" role="presentation">
               <a class="nav-link" href="#collegelevel" data-toggle="tab" role="tab">College Level<i class="fas fa-angle-down"></i></a>
@@ -54,24 +53,19 @@
         </div>
       </nav>
    </div>
+   
   <!--Header-->
   <header>
     <div class="container">
       <div class="row text-center" id="header-row">
         <div class="col-12">
-          <img src="img/bionix.png" alt="" class="img-fluid px-3 pt-4" style="justify-content: center;margin: 300px 0 100px 0;"/>
+          <img src="img/bionix.png" alt="" class="img-fluid"/>
         </div>
         <div class="col-12">
           <h1>BUSINESS AND IT OLYMPIAD <br>ON INFORMATION SYSTEM EXPO</h1>
         </div>
       </div>
     </div>
-    
-    <!-- <div class="tombol">
-      <a href="#" target="_blank">
-        <button type="button" class="button">Apply now</button>
-      </a>
-    </div> -->
   </header>
 
 
@@ -89,10 +83,10 @@
       <div class="text-coming-soon">COMING SOON</div>
       <div class="text-stay-tune"><span>Stay tuned,</span> our website is on the way!</div>
       <div class="countdown mt-3">
-        <li class="rounded p-1"><span id="days">00</span> Day</li>
-        <li class="rounded p-1"><span id="hours">00</span> Hour</li>
-        <li class="rounded p-1"><span id="minutes">00</span> Minute</li>
-        <li class="rounded p-1"><span id="seconds">00</span> Second</li>
+        <li class="rounded p-1"><span id="days">00</span> days</li>
+        <li class="rounded p-1"><span id="hours">00</span> hours</li>
+        <li class="rounded p-1"><span id="minutes">00</span>minutes</li>
+        <li class="rounded p-1"><span id="seconds">00</span>seconds</li>
       </div>
       <div class="tombol">
         <a href="#" id="button2">Download Guideline</a>
