--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 
                 </p>
               </div>
-              <div class="container-fluid" id="timeline-img">
-                <img src="/img/tahapan-persyaratan-student-level.png" class="img-fluid" style="margin-bottom: 20rem;"/>
-              </div>
+            </div>
+            <div id="timeline-img">
+              <img src="/img/tahapan-persyaratan-student-level.png" class="img-fluid" style="margin-bottom: 20rem;"/>
             </div>
           </section>
           
